Fixes #15267 - Introduce module for MinimumDataRateHandler. (#15268)
* Improved EventsHandler by changing `onResponseWriteComplete()` to take also the `last` and the content `ByteBuffer` as parameters.
  This allows a more precise accounting for written bytes.
* Updated `StatisticsHandler` to account for written bytes only if they are successfully written.
* Deprecated `HttpConfiguration.minRequestDataRate` and `HttpConfiguration.minResponseDataRate`.
  Only the former was still used, and only in Servlet code, but the mechanism should be replaced by `MinimumDataRateHandler`.
* Remove dead code in eeN's `HttpOutput` that was referring to `HttpConfiguration.minResponseDataRate` without actually enforcing the rate.
* Introduced `min-data-rate.mod`.
* Moved `MinimumDataRateHandler` to upper level, and added more tests.
* Updated documentation.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>